# TrainStationsApp

./: README.md
TrainStations/: build.gradle  settings.gradle
TrainStations/src/main/java/: module-info.java
TrainStations/src/main/java/com/example/orase/: GUI.java  Main.java
TrainStations/src/main/java/com/example/orase/controller/: Controller.java  MainController.java
TrainStations/src/main/java/com/example/orase/domain/: City.java  Entity.java  TrainStation.java
TrainStations/src/main/java/com/example/orase/utils/: Observer.java  (+2 more)
TrainStations/src/main/resources/com/example/orase/: client-view.fxml  main-view.fxml
fp/python project/: carti.txt  clienti.txt  cod  main.py
fp/python project/Controller/: CarteController.py  ClientController.py  InchiriereController.py
fp/python project/Domeniu/: Carte.py  Client.py  Inchiriere.py  ValidatorCarti.py
fp/python project/Repository/: CarteFileRepository.py  CarteRepository.py  ClientFileRepository.py  ClientRepository.py  InchiriereRepository.py
fp/python project/Teste/: RuleazaTeste.py  UnitTests.py
fp/python project/UI/: UI.py
oop/OOP-entire project/: CMakeLists.txt
oop/OOP-entire project/database/: medicamente.txt
oop/OOP-entire project/include/: Console.hpp  Gui.hpp  GuiRecipe.hpp  Medicament.hpp  Observer.hpp  RecipeDrawing.hpp  Repository.hpp  Service.hpp  TableModel.hpp  Test.hpp  Undo.hpp  Validator.hpp
oop/OOP-entire project/src/: Console.cpp  ConsoleRecipe.cpp  Gui.cpp  GuiRecipe.cpp  Medicament.cpp  Repository.cpp  Service.cpp  TableModel.cpp  Test.cpp  Undo.cpp  Validator.cpp  main.cpp
(+4 files in other folders)
